--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamTrack">
-        <activity android:name=".MovieDetailsActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".MovieDetailsActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.TeamTrack.NoActionBar">
             <intent-filter>
