--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:theme="@style/Theme.TeamTrack">
         <activity
             android:name=".MovieDetailsActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.TeamTrack">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
